@@ -1,3 +1,7 @@
+Fri May 23 13:17:24 1997  Olaf Bachmann  <obachman@schlupp.mathematik.uni-kl.de (Olaf Bachmann)>
+
+	* configure.in: added option --without-info
+
 Thu May 22 16:39:16 1997  Olaf Bachmann  <obachman@schlupp.mathematik.uni-kl.de (Olaf Bachmann)>
 
 	* mod2.h.in: Added HAVE_BUILTIN_GMP which is set by configure 
